@@ -1,5 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.3:
+*03/05/21:
+   * Fix cascade placement for multiple heads (Simon)
+     Workspace.hh/cc Window.hh/cc FbWinFrame.hh/cc
 *03/05/20:
    * Add xinerama for placement and snapping, plus tidy (Simon)
      Screen.hh/cc Window.cc Workspace.cc
